[gd_scene load_steps=10 format=3 uid="uid://b3a5qovvsnmt7"]

[ext_resource type="FontFile" uid="uid://ch7j6j6n75yoo" path="res://assets/font.ttf" id="1_cgn14"]
[ext_resource type="Script" path="res://scenes/menu.gd" id="1_qbheq"]
[ext_resource type="Texture2D" uid="uid://b1enf06ssx3u4" path="res://assets/menubg.png" id="4_l7sgt"]
[ext_resource type="Script" path="res://scenes/newGameButton.gd" id="5_odj0k"]
[ext_resource type="AudioStream" uid="uid://dfkqxl7vx8ul2" path="res://assets/sounds/ui.wav" id="6_g3o4v"]
[ext_resource type="Texture2D" uid="uid://b58dasmnbp1a4" path="res://assets/spotlight.jpg" id="7_g3y0y"]

[sub_resource type="Animation" id="Animation_fo5x8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menubg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_a6en2"]
resource_name = "fade in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menubg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g63ds"]
_data = {
"RESET": SubResource("Animation_fo5x8"),
"fade in": SubResource("Animation_a6en2")
}

[node name="Menu" type="Node2D"]
script = ExtResource("1_qbheq")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.219608, 0.219608, 0.219608, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.5
offset_top = -84.5
offset_right = 121.5
offset_bottom = 84.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_cgn14")
theme_override_font_sizes/font_size = 40
text = "dankcryptic"
horizontal_alignment = 1
vertical_alignment = 2

[node name="newGameButton" type="LinkButton" parent="CanvasLayer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../LinkButton2")
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
theme_override_fonts/font = ExtResource("1_cgn14")
theme_override_font_sizes/font_size = 15
text = "New Game"
underline = 2
script = ExtResource("5_odj0k")

[node name="LinkButton2" type="LinkButton" parent="CanvasLayer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../newGameButton")
focus_neighbor_bottom = NodePath("../LinkButton3")
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
theme_override_fonts/font = ExtResource("1_cgn14")
theme_override_font_sizes/font_size = 15
text = "Load Game"
underline = 2

[node name="LinkButton3" type="LinkButton" parent="CanvasLayer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../LinkButton2")
focus_neighbor_bottom = NodePath("../LinkButton4")
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
theme_override_fonts/font = ExtResource("1_cgn14")
theme_override_font_sizes/font_size = 15
text = "Options"
underline = 2

[node name="LinkButton4" type="LinkButton" parent="CanvasLayer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../LinkButton3")
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
theme_override_fonts/font = ExtResource("1_cgn14")
theme_override_font_sizes/font_size = 15
text = "Exit"
underline = 2

[node name="Label2" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_cgn14")
theme_override_font_sizes/font_size = 10
text = "Â© 2024, BBM Games, LLC. All Right Reserved."
vertical_alignment = 2

[node name="FileDialog" type="FileDialog" parent="CanvasLayer"]
mode = 2
title = "Open a File"
initial_position = 2
size = Vector2i(400, 250)
ok_button_text = "Open"
file_mode = 0
root_subfolder = "saves"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="options" type="Control" parent="CanvasLayer2"]
layout_mode = 3
anchors_preset = 0
offset_left = 30.0
offset_top = 26.0
offset_right = 70.0
offset_bottom = 66.0
metadata/_edit_use_anchors_ = true

[node name="Menubg" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = -3
z_as_relative = false
position = Vector2(288, 161)
scale = Vector2(1.125, 0.628906)
texture = ExtResource("4_l7sgt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g63ds")
}
autoplay = "fade in"

[node name="uiPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_g3o4v")
volume_db = 1.0
bus = &"Sounds"

[node name="spotlight" type="PointLight2D" parent="."]
position = Vector2(290, 84)
energy = 0.5
texture = ExtResource("7_g3y0y")

[connection signal="mouse_entered" from="CanvasLayer/Control/VBoxContainer/newGameButton" to="." method="_on_new_game_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/newGameButton" to="." method="_on_link_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Control/VBoxContainer/LinkButton2" to="." method="_on_link_button_2_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/LinkButton2" to="." method="_on_link_button_2_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Control/VBoxContainer/LinkButton3" to="." method="_on_link_button_3_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/LinkButton3" to="." method="_on_link_button_3_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Control/VBoxContainer/LinkButton4" to="." method="_on_link_button_4_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/LinkButton4" to="." method="_on_link_button_4_pressed"]
[connection signal="confirmed" from="CanvasLayer/FileDialog" to="." method="_on_file_dialog_confirmed"]
